reworked method downloadFile ResponseBody instead of ResponseEntity now return